<resources>
    <string name="app_name">etrack</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="click_to_login">click to login</string>
    <string name="click_to_register">click to register</string>
    <string name="logout">Logout</string>
    <string name="etrack">ETrack</string>
    <string name="admin">ADMIN</string>
    <string name="employee">EMPLOYEE</string>
    <string name="please_select_an_option">Please select an option</string>
    <string name="admin_dashboard">Admin Dashboard</string>
    <string name="location">Location</string>
    <string name="add_employee">Add Employee</string>
    <string name="title_activity_view_employee_location">ViewEmployeeLocation</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="title_activity_emplocation">emplocation</string>
    <string name="title_activity_emploc">emploc</string>
    <string name="title_activity_read">Read</string>
    <string name="employee_dashboard">Employee dashboard</string>
    <string name="username">Username</string>
    <string name="please_verify_yourself">Please verify yourself</string>
    <string name="google_recaptcha">Google Recaptcha</string>
    <string name="verify_captcha">Verify captcha</string>
    <string name="title_activity_show_emp_loc">ShowEmpLoc</string>
    <string name="phone">Phone</string>
    <string name="register_as_an_employee">Register as an Employee</string>
    <string name="register_as_admin">Register as Admin</string>
    <string name="add_task">Add Task</string>
    <string name="enter_task_1">Enter task 1</string>
    <string name="enter_task_2">Enter task 2</string>
    <string name="enter_task_3">Enter task 3</string>
    <string name="enter_task_4">Enter task 4</string>
    <string name="enter_task_5">Enter task 5</string>
    <string name="enter_name">Enter name</string>
    <string name="submit">Submit</string>
    <string name="addtask">Add task</string>
    <string name="view_task">View Task</string>
    <string name="view">View Task</string>
    <string name="get_task">Get task</string>
    <string name="get_location">Get Location</string>
    <string name="track_location">Track Location</string>
    <string name="assign_tasks">Assign Tasks</string>
</resources>