<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:orientation="vertical"
    tools:context=".Admin.admin_dashboard">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="20dp"
        android:text="@string/employee_dashboard"
        android:textSize="30sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/location"
        android:text="@string/get_location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        android:drawableTop="@drawable/location"
        android:background="@drawable/square_btn"
        />

    <Button
        android:layout_width="150dp"
        android:id="@+id/task"
        android:layout_height="140dp"
        android:layout_gravity="center"
        android:layout_marginTop="80dp"
        android:background="@drawable/square_btn"
        android:drawableTop="@drawable/task2"
        android:text="@string/view_task" />




</LinearLayout>